refactor(grails): plan all generated project changes before writing
- project/plan package: ProjectChangeType, PlannedProjectFile,
  ProjectChange, GenerationDiagnostic(Code), GenerationPlan(+Summary),
  GeneratedProjectManifest(Store), TextFileEdit
- GrailsGenerationPlanner builds the complete plan before any write:
  descriptor gate, generator artefacts, legacy scan, text updaters,
  ownership validation, manifest comparison
- GrailsGenerationExecutor writes atomically, deletes last, manifest last;
  blocking diagnostics mean zero project changes
- all generators expose pure plan() functions; GrailsCrudGenerator uses
  plan/apply/generate; legacy generate() methods remain compat wrappers
- ownership rules: a local main.gsp is always APPLICATION_OWNED
  (plugin default lives in the plugin JAR); legacy deletion only via
  known-hash migration path; verifyGenerationOwnershipRules task
- CLI: --grails-dry-run, --grails-plan-json, --grails-plan-markdown
- regeneration contract tests cover idempotency, user-modified blocking,
  manifest-last, path traversal, secrets